--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.83.1"
   },
   "devDependencies": {
