--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/edge-config": "^1.4.0",
     "@vercel/kv": "^3.0.0",
     "gray-matter": "^4.0.3",
     "hamburger-react": "^2.5.2",
