--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ bun.lockb
 data/newsletter-emails.txt
 data/newsletter-emails.txt
 bun.lockb
+bun.lockb
+eslint.config.mjs
+next.config.mjs
+data/newsletter-emails.txt
